--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
       	
       	<div id="contact-form" class="twelve columns">
 
-            <form name="contactForm" id="contactForm" method="post" action="enviar-2.php">
+            <form name="contactForm" id="contactForm" method="post" action="sendEmail.php">
 
       			<fieldset>
 
@@ -530,12 +530,12 @@
 
 	                  <div class="six columns mob-whole">
 	                  	<label for="contactFname">First Name <span class="required">*</span></label>	      						   
-	      					<input name="name" type="text" id="contactFname" placeholder="First Name" value="" />	      					
+	      					<input name="contactFname" type="text" id="contactFname" placeholder="First Name" value="" />	      					
 	                  </div>
 
 	                  <div class="six columns mob-whole">	
 	                  	<label for="contactLname">Last Name <span class="required">*</span></label>      						   
-	      					<input name="apellido" type="text" id="contactLname" placeholder="Last Name" value="" />	      					
+	      					<input name="contactLname" type="text" id="contactLname" placeholder="Last Name" value="" />	      					
 	                  </div>	                        
 
                   </div>
@@ -544,12 +544,12 @@
 
 	                  <div class="six columns mob-whole">	
 	                  	<label for="contactEmail">Email <span class="required">*</span></label>      						   
-	      					<input name="email" type="text" id="contactEmail" placeholder="Email" value="" />	      					
+	      					<input name="contactEmail" type="text" id="contactEmail" placeholder="Email" value="" />	      					
 	                  </div>
 
 	                  <div class="six columns mob-whole">	 
 	                  	<label for="contactSubject">Subject</label>     						   
-	      					<input name="asunto" type="text" id="contactSubject" placeholder="Subject"  value="" />	      					
+	      					<input name="contactSubject" type="text" id="contactSubject" placeholder="Subject"  value="" />	      					
 	                  </div>
 
                   </div>
@@ -558,7 +558,7 @@
 
 	                  <div class="twelve columns">
 	                     <label  for="contactMessage">Message <span class="required">*</span></label>
-	                     <textarea name="mensaje"  id="contactMessage" placeholder="Your Message" rows="10" cols="50" ></textarea>
+	                     <textarea name="contactMessage"  id="contactMessage" placeholder="Your Message" rows="10" cols="50" ></textarea>
 	                  </div>
 
                   </div>
