--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
 		               <p> Meet Ramiro, our talented designer and web developer. He is dedicated to crafting innovative and impactful designs, as well as delivering comprehensive and cohesive web development solutions. </p>
 
 		               <ul class="member-social">
-		                  <li><a href="https://www.linkedin.com/in/ramiro-giunta-a2a9a6b0/"><i class="fa fa-linkedin"></i></a></li>
+		                  <li><a href="www.linkedin.com/in/ramiro-giunta"><i class="fa fa-linkedin"></i></a></li>
 
 		               </ul>
 
